[project]
name = "peas-agent-tools"
version = "0.1.0"
description = "PEAS Agent built-in LangChain tools — file, exec, web, and path helpers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.5.5",
    "httpx>=0.28.0",
    "langchain-core>=0.3.0",
    "readability-lxml>=0.8.4",
]

[project.urls]
Repository = "https://github.com/mz038197/peas-agent-tools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peas_agent_tools"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
